--- a/box-6-with-nav-indicator.html
+++ b/box-6-with-nav-indicator.html
@@ -195,11 +195,11 @@
             <div class="logo">Maison de ZOÉ</div>
             <div class="product">
                 <ul>
-                    <li><a href="#"><i class="fa fa-gift" aria-hidden="true"></i>
+                    <li><a href="#gift"><i class="fa fa-gift" aria-hidden="true"></i>
                         </a></li>
-                    <li><a href="#"><i class="fa fa-birthday-cake" aria-hidden="true"></i>
+                    <li><a href="#gift"><i class="fa fa-birthday-cake" aria-hidden="true"></i>
                         </a></li>
-                    <li><a href="#"><i class="fa fa-th" aria-hidden="true"></i></a></li>
+                    <li><a href="#gift"><i class="fa fa-th" aria-hidden="true"></i></a></li>
                     <!-- <li><a href="#"><i class="fa fa-cloud" aria-hidden="true"></i>
                     </a></li>
                     <li><a href="#"><i class="fa fa-bell" aria-hidden="true"></i>
@@ -265,7 +265,6 @@
                     <p>private order</p>
                 </div>
             </div>
-
         </div>
     </section>
 
@@ -278,41 +277,39 @@
         </header>
     
         <div class="container">
-                <img src="macaron-005.jpeg" alt="macarons">
-            <!-- <div class="box top-center">
-                <div class="item">
-                    <img src="macaron-005.jpeg" alt="macarons">
-                    <p>macaron x cookie</p>
-                </div>
+            <div>
+                <ion-icon name="alarm-outline"></ion-icon>
+                <p class="title">영업시간</p>
+                <p class="content">월-금 08:30-20:00</p>
+                <p class="content">토 08:30-16:00</p>
+                <p class="content">일요일 공휴일 휴무</p>
             </div>
-            <div class="box top-center">
-                <div class="item">
-                    <img src="cookie-002.jpeg" alt="macarons">
-                    <p>cookie package</p>
-                </div>
+            <div>
+                <ion-icon name="call-outline"></ion-icon>
+                <p class="title">주문과 상품 문의</p>
+                <p class="content">0 2 . 5 4 0 . 1 8 5 8</p>
             </div>
-            <div class="box top-center">
-                <div class="item">
-                    <img src="mille-001.png" alt="macarons">
-                    <p>mille-feuille & pie</p>
-                </div>
-            </div> -->
+            <div>
+                <ion-icon name="navigate-circle-outline"></ion-icon>
+                <p class="title">청담 본점</p>
+                <p class="content">서울시 강남구 청담동 50-7 1층</p>
+                <p class="content">bus. 4419 청담2치안센터</p>
+                <p class="content">subway. 7호선 청담역 9번 출구 800m</p>
+                <p class="title">삼성역점</p>
+                <p class="content">서울시 강남구 삼성동 현대백화점 무역센터점(코엑스) 지하 1층</p>
+                <p class="content">subway. 2호선 삼성역 5번 출구</p>
+                <p class="title">분당 서현점</p>
+                <p class="content">경기도 성남시 분당구 AK플라자 백화점 분당점 지하 1층</p>
+                <p class="content">subway. 분당선 서현역 1번 출구</p>   
+            </div>
         </div>
 
 
-        <div class="contentText">
-            <p>02. 540. 1858</p>
-            <br>
-            <p>월-토 09:00 - 20:00</p>
-            <br>
-            <p>서울시 강남구 청담동 50-7 1층</p>
             <!-- <div>2 서울시 강남구 삼성동 현대백화점 무역센터점 지하1층 (코엑스,지하철2호선 삼성역)</div>
             <div>3 경기도 성남시 분당구 AK플라자 백화점 분당점 지하1층 (지하철 분당선 서현역)</div>
             <br>
             <div id="subtitle">e-commerce | 온라인 주문</div>
             <div>마켓컬리 '메종드조에' 검색</div> -->
-        </div>
-
     </section>
 
 
