--- a/index.html
+++ b/index.html
@@ -283,11 +283,13 @@
                 <p class="content">월-금 08:30-20:00</p>
                 <p class="content">토 08:30-16:00</p>
                 <p class="content">일요일 공휴일 휴무</p>
+                <p class="content"></p>
+
             </div>
             <div>
                 <ion-icon name="call-outline"></ion-icon>
                 <p class="title">주문과 상품 문의</p>
-                <p class="content">0 2 . 5 4 0. 1 8 5 8</p>
+                <p class="content">0 2 . 5 4 0 . 1 8 5 8</p>
             </div>
             <div>
                 <ion-icon name="navigate-circle-outline"></ion-icon>
